# gscap

./: .gitignore  pyproject.toml  requirements.txt
custom/: gscbt-0.1.1-py3-none-any.whl  statsmodel.md
custom/gscbt/: pyproject.toml
custom/gscbt/gscbt/: __init__.py  data_pipeline.py  engine.py  framework.py  ticker.py  utils.py
custom/gscbt/gscbt/data/: iqfeed_data.xlsx  iqfeed_data_old.xlsx
custom/quantstats/quantstats/_plotting/: core.py  wrappers.py
docs/: verification.md
examples/: risk.py
examples/risk/: risk.py  st.py
src/gscap/: __init__.py  integrity.py  metrics.py  util.py  utils.py
src/gscap/framework/: __init__.py  utils.py
src/gscap/framework/forecast/: __init__.py  utils.py
src/gscap/framework/instruments/: __init__.py  meta.py
src/gscap/framework/strategy/: __init__.py  analyse.py  calculations.py
src/gscap/framework/subsystem/: __init__.py  calculations.py
src/gscap/pipe/: __init__.py  pipeline.py
src/gscap/plot/: __init__.py
src/gscap/risk/: helper.py  models.py
