[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscap"
version = "0.1.0"
authors = [{ name = "Anruag Shukla", email = "anurag.shukla@ibisp.in" }]
description = "A short description."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "pip==25.0",
    "setuptools==75.8.0",
    "wheel==0.45.1",
    "missingno==0.5.2",
    "plotly==6.0.0",
    "nbformat==5.10.4",
    "calplot==0.1.7.5",
    "prettytable==3.14.0",
    "numba==0.61.0",
]

[tool.flake8]
ignore = ["E501"]
