[build-system]
requires = ["setuptools>=61.0", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gscbt"
version = "0.1.1"
description = "futures backtesting lib under development"
authors = [
    {name = "Priyam"}
]
requires-python = ">=3.0"
license = {file = "LICENSE"}
dependencies = [
    "numpy",
    "pandas",
    "polars",
    "pyarrow",
    "python-calamine",
    "requests",
]

[project.urls]
# You might want to add these if available
# "Homepage" = "https://github.com/username/gscbt"
# "Bug Tracker" = "https://github.com/username/gscbt/issues"

[tool.setuptools]
packages = ["gscbt"]